--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ footer p {
 // Función para cargar la lista de experimentos (carpetas) y actualizar el selector
     async function loadExperimentList() {
         // Array manual con los nombres de las carpetas de experimentos
-        const experimentFolders = ['18-10-2024_11-46_exp_LSTM_IMDB_32_10', '18-10-2024_12-14_exp_BiLSTM_IMDB_32_10'];
+        const experimentFolders = ['18-10-2024_11-46_exp_LSTM_IMDB_32_10', '18-10-2024_12-14_exp_BiLSTM_IMDB_32_10','18-10-2024_12-30_exp_GRU_IMDB_32_10'];
 
         const select = document.getElementById('experiment-select');
         experimentFolders.forEach(folder => {
