--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <style>
+<style>
 *{
     margin: 0;
     padding: 0;
@@ -99,7 +99,7 @@ footer p {
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 5px;
-    background-color:  #eceff1;
+    background-color: #bdbdbd;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
