--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function parseExperimentData(data, folder) {
     
     const parsedData = lines.reduce((acc, line) => {
         console.log(line);
-        const [xValue, yValue] = line.slice(1).split(' '); // Ajusta según el formato de tus datos
+        const [xValue, yValue] = line.split(' '); // Ajusta según el formato de tus datos
         if (xValue && yValue) {
             acc.x.push(parseFloat(xValue));
             acc.y.push(parseFloat(yValue));
