--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ function parseExperimentData(data, folder) {
         data: {
             x: parsedData.x,
             y: parsedData.y,
-            name: legend,
+            name: folder,
             type: 'scatter',
             mode: 'lines+markers' // Opcional, ajusta según tus necesidades
         }
